Fix line-height & alignment of modal value (#1037)
- ensure line-height is 1.5 in the nok-section
- ensure the modal in the idp-row doesn't start to low

--- a/theme/base/stylesheets/shared.scss
+++ b/theme/base/stylesheets/shared.scss
@@ -14,6 +14,7 @@ body {
     font-family: 'SourceSansPro', sans-serif;
     font-size: 100%;
     justify-content: center;
+    line-height: 1.5;
     margin: 0;
     overflow-wrap: break-word;
 
